username of user loggedIn not showing fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -252,6 +252,7 @@ button {
 .loginContainer button {
   background-color: dodgerblue;
   color: white;
+  cursor: pointer
 }
 
 .loginContainer input {
